--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,6 +41,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 }
 
 header {
